# cmake-examples

./: .gitignore  README.md
01-trivial-compile/: README.md  main.cpp
02-libraries/: CMakeLists.txt  README.md
02-libraries/src/: CMakeLists.txt
02-libraries/src/libpow/: CMakeLists.txt
02-libraries/src/libpow/libpow/: pow.cpp  pow.hpp
02-libraries/src/libsqrt/: CMakeLists.txt
02-libraries/src/libsqrt/libsqrt/: sqrt.cpp  sqrt.hpp
02-libraries/src/math/: CMakeLists.txt  main.cpp
03-cps/: README.md
03-cps/cmake/: CompileOptions.cmake
04-gtest/: CMakeLists.txt  README.md
04-gtest/test/: CMakeLists.txt
OpenCV/IO/: toBlack.py
QT/build-untitled-Desktop_Qt_6_4_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  untitled
QT/untitled/: CMakeCache.txt  main.cpp  mainwindow.ui
cmake-training/01-simple_cmake/: .clang-tidy  CMakeLists.txt
cmake-training/02-cmake_presets_compile_opt/: .clang-tidy  CMakeLists.txt
cmake-training/02-cmake_presets_compile_opt/src/libsolver/: CMakeLists.txt
cmake-training/02-cmake_presets_compile_opt/src/libsolver/libsolver/: solver.cpp  solver.hpp
cmake-training/03-external_compile/: CMakeLists.txt
cpp_notes/: .gitignore  README.md
leetcode/: 645.cpp  Add_Two_Numbers.cpp  Container_With_Most_Water.cpp  Koko_Eating_Bananas.cpp  Letter_Combinations_of_a_Phone_Number.cpp  a.out  longest-common-prefix.cpp  longestsubswithoutrepchar3.cpp  palindromenumber9.cpp  remove_duplicates.cpp  rotate_image.cpp  search_insert_position.cpp  valid-parentheses.cpp
trivial-compile-01/: CMakeLists.txt  README.md
(+323 files in other folders)
